--- a/css/sass/partials/layout.scss
+++ b/css/sass/partials/layout.scss
@@ -6,7 +6,7 @@
 
 $susy: (
   'columns': susy-repeat(12, 70px),
-  'gutters': 30px,
+  'gutters': $gap,
   'spread': 'narrow',
   'container-spread': 'narrow',
 );
