header et footer css

--- a/css/sass/modules/variables.scss
+++ b/css/sass/modules/variables.scss
@@ -20,6 +20,7 @@ $line-height-base: 1.4;
 $text-color: #2b2b2b;
 $body-bg: #fff;
 $selection-bg: #04A4CC;
+$hover: #4ee8b4;
 
 $featured: #5a3682;
 $grey: #dbdbdb;
