--- a/css/sass/partials/layout.scss
+++ b/css/sass/partials/layout.scss
@@ -24,6 +24,7 @@ main{
 
 .container{
 	max-width: $wrapper-width;
+	min-height: 100%;
   padding: 0 $margin-horizontal-large;
   margin: 0 auto;
 }
