home full content

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -19,6 +19,7 @@
 @import "partials/content";
 @import "partials/pages";
 @import "partials/footer";
+@import "partials/woocommerce";
 
 @import "partials/print";
 @import "partials/mediaqueries";
