add slick slider

--- a/css/sass/modules/variables.scss
+++ b/css/sass/modules/variables.scss
@@ -10,6 +10,7 @@
 
 $font-family-base: "Chivo", Helvetica, Arial, sans-serif;
 $font-family-title: "Merriweather", Helvetica, Arial, sans-serif;
+$font-icon: "margaux-font", "FontAwesome";
 $font-size-base: 1.8em;
 $line-height-base: 1.4;
 
@@ -40,6 +41,7 @@ $topbarHeight: 40px;
 $wrapper-width: 1170px;
 $halfWidth: $wrapper-width /2;
 $slideshowHeight: 475px;
+$sliderHeight: 400px;
 
 $padding-horizontal-base: 5px;
 $padding-vertical-base: 5px;
