--- a/css/sass/partials/woocommerce.scss
+++ b/css/sass/partials/woocommerce.scss
@@ -6,4 +6,33 @@
 		background-color: $hover;
 	}
 
+	ul.products li.product{
+		text-align: center;
+
+		.onsale{
+			display: none;
+		}
+
+		h3{
+			font-size: 1.2rem;
+		}
+
+		h2{
+			font-size: 1.9rem;
+		}
+
+		.price{
+			font-size: 2.2rem;
+			color: $darkGrey;
+			padding-top: $gutter;	
+
+			del, ins{
+				display: inline;
+			}
+			ins{
+				text-decoration: none;
+			}
+		}
+	}
+
 }
