--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -14,6 +14,7 @@
 @import "partials/reset";
 @import "partials/wordpress";
 @import "partials/utils";
+@import "partials/slick";
 @import "partials/layout";
 @import "partials/header";
 @import "partials/content";
