--- a/css/sass/partials/content.scss
+++ b/css/sass/partials/content.scss
@@ -28,6 +28,7 @@ section{
 
 .button{
 	background-color: $lightGrey;
+	border: none;
 	padding: 5px $gutter 5px $gutterMedium;
 	color: $dark;
 	@include border-radius(50px);
@@ -37,6 +38,21 @@ section{
 		background-color: $hover;
 		color: $dark;
 	}
+
+	&.big{
+		margin: 0 auto;
+		display: block;
+		text-align: center;
+		color: white;
+		width: 50px;
+		height: 50px;
+		font-size: 3rem;
+		padding: 5px 0 0 1px;
+	}
+}
+
+a:hover > span.button{
+	background-color: $hover;
 }
 
 .add-to-cart{
