--- a/css/sass/partials/layout.scss
+++ b/css/sass/partials/layout.scss
@@ -18,15 +18,23 @@ $susy: (
 	@include flex-direction(column);
 }
 
-main{
-	@include flex(1);
-}
-
 .container{
 	max-width: $wrapper-width;
 	min-height: 100%;
   padding: 0 $margin-horizontal-large;
   margin: 0 auto;
+}
+
+main{
+	@include flex(1);
+
+	> section:not(.full), > .row:not(.full){
+		max-width: $wrapper-width;
+		min-height: 100%;
+	  padding: 0 $margin-horizontal-large;
+	  margin: 0 auto;
+	  margin-bottom: 40px;
+	}
 }
 
 .row{
@@ -56,10 +64,6 @@ main{
 	    margin-right: 0;
 	  }
 	}
-}
-
-main > .container > section, main > .container > .row{
-	margin-bottom: 40px;
 }
 
 article{
