--- a/css/sass/partials/slick.scss
+++ b/css/sass/partials/slick.scss
@@ -104,6 +104,12 @@
     outline: none;
     cursor: pointer;
 
+    &:hover{
+        span{
+            background-color: $hover;
+        }
+    }
+
     span{
         content: 'd';
         display: block;
@@ -118,6 +124,7 @@
         color: white;
         font-size: 2.9rem;
         @include flex-shrink(0);
+        @include transition(background-color .3s ease);
     }
 
     &.prev span{
