--- a/css/sass/partials/woocommerce.scss
+++ b/css/sass/partials/woocommerce.scss
@@ -6,31 +6,74 @@
 		background-color: $hover;
 	}
 
-	ul.products li.product{
+	ul.products{
 		text-align: center;
 
-		.onsale{
-			display: none;
-		}
+		li.product{
+			text-align: center;
 
-		h3{
-			font-size: 1.2rem;
-		}
-
-		h2{
-			font-size: 1.9rem;
-		}
-
-		.price{
-			font-size: 2.2rem;
-			color: $darkGrey;
-			padding-top: $gutter;	
-
-			del, ins{
-				display: inline;
+			.onsale{
+				display: none;
 			}
-			ins{
-				text-decoration: none;
+
+			h3{
+				font-size: 1.2rem;
+			}
+
+			h2{
+				font-size: 1.9rem;
+			}
+
+			.price{
+				font-size: 2.2rem;
+				color: $darkGrey;
+				padding-top: $gutter;	
+
+				del, ins{
+					display: inline;
+				}
+				ins{
+					text-decoration: none;
+				}
+			}
+
+			a:hover .price{
+				color: $hover;
+			}
+
+			@at-root .coup-de-coeur &{
+				width: auto;
+				display: inline-block;
+				float: none;
+				margin: 0;
+
+				img{
+					@include border-radius(100%);
+				}
+			}
+
+			@at-root .immanquables &{
+				width: span(3);
+				display: inline-block;
+				float: none;
+				margin: 0;
+				margin-right: $gap;
+				padding: $gutterMedium;
+				a{
+					color: $lightGrey;
+				}
+
+				&:last-child{
+					margin-right: 0;
+				}
+
+				img{
+					@include border-radius(100%);
+				}
+			}
+
+			@at-root .category-products &{
+				margin-bottom: 0;
 			}
 		}
 	}
