--- a/css/sass/partials/woocommerce.scss
+++ b/css/sass/partials/woocommerce.scss
@@ -1,6 +1,7 @@
 /* woocommerce */
 
 .woocommerce{
+	height: 100%;
 
 	span.onsale{
 		background-color: $hover;
@@ -8,6 +9,7 @@
 
 	ul.products{
 		text-align: center;
+		height: 100%;
 
 		li.product{
 			text-align: center;
@@ -58,12 +60,21 @@
 						font-family: $font-icon;
 						font-size: 12rem;
 						color: white;
-						padding-top: 10px;
 						position: absolute;
 						top: 10%;
 						left: 10%;
 						border-radius: 100%;
 						@include transition(opacity .3s ease);
+						@include flexbox();
+						@include align-items(center);
+						@include justify-content(center);
+
+						@at-root .immanquables &{
+							width: 100%;
+							height: 100%;
+							top: 0;
+							left: 0;
+						}
 					}
 				}
 
@@ -76,15 +87,59 @@
 				}
 			}
 
-			// a:hover .price{
-			// 	color: $hover;
-			// }
-
 			@at-root .coup-de-coeur &{
 				width: auto;
 				display: inline-block;
 				float: none;
 				margin: 0;
+				width: 100%;
+				height: 100%;
+
+				a{
+					position: relative;
+					background-color: $lightGrey;
+					color: $featured;
+					padding: $gutter;
+					display: block;
+					width: 100%;
+					height: 100%;
+					@include flexbox-column();
+					@include align-items(center);
+					@include justify-content(center);
+
+					.title{
+						font-size: 2rem;
+						color: $featured;
+						margin-bottom: 20px;
+					}
+
+					&:hover{
+						background-color: $hover;
+						.thumbnail:after{
+							display: none;
+						}
+					}
+
+					.thumbnail{
+						width: span(3);
+					}
+
+					&:before{
+						content: 'e';
+						font-family: $font-icon;
+						height: 80px;
+						width: 80px;
+						background-color: white;
+						color: $featured;
+						position: absolute;
+				    border-radius: 80px;
+				    text-align: center;
+				    font-size: 5.5rem;
+				    padding-top: 5px;
+				    left: 20px;
+				    top: 20px;
+					}
+				}
 
 				img{
 					@include border-radius(100%);
