--- a/css/sass/partials/content.scss
+++ b/css/sass/partials/content.scss
@@ -67,11 +67,13 @@ a:hover > span.button{
 	width: 100%;
 	background-color: $featured;
 	color: $lightGrey;
+	overflow: hidden;
 
 	.slides{
 		height: 100%;
 		width: $wrapper-width;
 		padding: 0;
+		margin: 0;
 	}
 
 	.slide{
