single product ok

--- a/css/sass/modules/variables.scss
+++ b/css/sass/modules/variables.scss
@@ -26,6 +26,7 @@ $hover: #4ee8b4;
 $featured: #5a3682;
 $grey: #dbdbdb;
 $lightGrey: #e5e1d6; /*ok*/
+$lighterGrey: #f0f0f0; /*ok*/
 $darkGrey: #aca895; /*ok*/
 $dark: #313131;
 $black: #1a1a1a;
