social and share button

--- a/css/sass/modules/variables.scss
+++ b/css/sass/modules/variables.scss
@@ -43,6 +43,7 @@ $wrapper-width: 1170px;
 $halfWidth: $wrapper-width /2;
 $slideshowHeight: 475px;
 $sliderHeight: 400px;
+$mapHeight: 720px;
 
 $padding-horizontal-base: 5px;
 $padding-vertical-base: 5px;
