actus + actu single

--- a/css/sass/modules/variables.scss
+++ b/css/sass/modules/variables.scss
@@ -24,6 +24,7 @@ $selection-bg: #04A4CC;
 $hover: #4ee8b4;
 
 $featured: #5a3682;
+$lightFeatured: #d2f5e9;
 $grey: #dbdbdb;
 $lightGrey: #e5e1d6; /*ok*/
 $lighterGrey: #f0f0f0; /*ok*/
