--- a/css/sass/partials/layout.scss
+++ b/css/sass/partials/layout.scss
@@ -32,7 +32,8 @@ main{
 		max-width: $wrapper-width;
 		min-height: 100%;
 	  padding: 0 $margin-horizontal-large;
-	  margin: 0 auto;
+	  margin-left: auto;
+	  margin-right: auto;
 	  margin-bottom: 40px;
 	}
 }
