--- a/css/sass/partials/utils.scss
+++ b/css/sass/partials/utils.scss
@@ -38,6 +38,7 @@
 		-webkit-transform-style: preserve-3d;
 		transform-style: preserve-3d;
 		position: relative;
+		display: block;
 	}
 
 	/* hide back of pane during swap */
