--- a/css/sass/partials/header.scss
+++ b/css/sass/partials/header.scss
@@ -36,7 +36,7 @@
 			}
 
 		}
-		a:hover, li.current-menu-item a{
+		a:hover, li.current-menu-item a, li.current_page_parent a{
 			color: $hover;
 
 			&:after{
@@ -184,7 +184,7 @@
 		@include transition(background-color .3s ease);
 	}
 
-	a:hover, li.current-menu-item a{
+	a:hover, li.current-menu-item a, li.current_page_parent a{
 		background-color: $hover;
 		color: $black;
 	}
