--- a/css/sass/partials/woocommerce.scss
+++ b/css/sass/partials/woocommerce.scss
@@ -280,3 +280,14 @@
 		display: none;
 	}
 }
+
+.prdctfltr_wc{
+	width: span(3);
+}
+
+// .prdctfltr-shop{
+// 	main{
+// 		@include flexbox();
+// 		@include flex-wrap(wrap);
+// 	}
+// }
