--- a/css/sass/partials/content.scss
+++ b/css/sass/partials/content.scss
@@ -153,7 +153,7 @@ a:hover > span.button{
 	@extend %container;
 	text-align: center;
 	font-size: 3.8rem;
-	margin-top: $gap;
+	// margin-top: $gap;
 	&, a{
 		color: $featured;
 	}
